Fixed style and tag for scrollbar position.

--- a/web/template/_layout/style.scss
+++ b/web/template/_layout/style.scss
@@ -99,9 +99,14 @@ body {
 	padding: 10px;
 	overflow-y: auto;
 
-	@media(min-width: 1300px) {
-		width: 960px;
-		margin: 0 auto;
+	.main-content-area {
+		width: 100%;
+		padding: 10px;
+
+		@media(min-width: 1300px) {
+			width: 960px;
+			margin: 0 auto;
+		}
 	}
 
 	.menu {
